--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
         if (document.hidden) {
           document.title = "Vuelve 💔";
         } else {
-          document.title = "Metodología del Desarrollo";
+          document.title = "Bicicletero ISW";
         }
       });
     </script>
