Sistema de cupos mejorado y control de accesos por rol

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/LogoIECI.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Metodología del Desarrollo</title>
+    <title>Bicicletero UBB</title>
   </head>
   <body>
     <div id="root"></div>
